...
            ),
            const SizedBox(height: 15.0),
            // input text field for answers
            Form(
              key: widget.globalKey,
              child: TextFormField(
                key: const Key('inputKey'),
                controller: widget.controller,
                onChanged: (value) {},
                decoration: const InputDecoration(
                  enabledBorder: UnderlineInputBorder(
                    borderSide: BorderSide(color: AppColors.primaryColor),
                  ),
...
                        duration: const Duration(milliseconds: 400),
                        curve: Curves.easeInBack);
                  },
                  buttonWidth: 100,
                  buttonHeight: 42),
              FormButton(
                  key: const Key('OnboardingNextButtonKey'),
                  backgroundColor: AppColors.primaryColor,
                  textColor: AppColors.secondaryColor3,
                  text: 'Next',
                  borderColor: AppColors.primaryColor,
                  onPressed: () {
                    if (widget.globalKey.currentState!.validate() == true) {
...
            fontWeight: FontWeight.w700,
          ),
        ),
        Column(
          children: [
            RadioListTile(
              key: const Key('RadioButtonDaKey'),
              activeColor: Colors.black,
              tileColor: const Color(0xFFE9E9E9),
              contentPadding: EdgeInsets.zero,
              toggleable: true,
              title: const Text('Da'),
              value: Opcija.Da,
...
          },
        ),
        const Spacer(),
        Padding(
          padding: const EdgeInsets.only(left: 200),
          child: FormButton(
            key: const Key('FirstQuestionNextButtonKey'),
            backgroundColor: AppColors.primaryColor,
            textColor: AppColors.secondaryColor3,
            borderColor: AppColors.primaryColor,
            buttonWidth: 100,
            buttonHeight: 42,
            text: 'Next',
...
                        duration: const Duration(milliseconds: 400),
                        curve: Curves.easeInBack);
                  },
                  buttonWidth: 100,
                  buttonHeight: 42),
              FormButton(
                  key: const Key('VideoPageNextButtonKey'),
                  backgroundColor: AppColors.primaryColor,
                  textColor: AppColors.secondaryColor3,
                  text: 'Next',
                  borderColor: AppColors.primaryColor,
                  onPressed: () {
                    pageController.nextPage(
...
            ],
          ),
          const SizedBox(
            height: 60,
          ),
          SubmitButton(
              key: const Key('SubmitButtonKey'),
              backgroundColor: AppColors.primaryColor,
              textColor: AppColors.secondaryColor3,
              text: 'Submit',
              onPressed: widget.submitButton,
              buttonWidth: double.infinity,
              buttonHeight: 42),
          const SizedBox(height: 10)
        ],
      ),
...
