...
              Container(
                color: Colors.white,
                child: SizedBox(
                  height: 49,
                  width: 39,
                  child: TextFormField(
                    key: const Key("num1Key"),
                    controller: _num1,
                    style: GoogleFonts.notoSans(
                        fontSize: 16, fontWeight: FontWeight.w700),
                    decoration: InputDecoration(
                      focusedBorder: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(6),
...
              Container(
                color: Colors.white,
                child: SizedBox(
                  height: 49,
                  width: 39,
                  child: TextFormField(
                    key: const Key("num2Key"),
                    controller: _num2,
                    style: GoogleFonts.notoSans(
                        fontSize: 16, fontWeight: FontWeight.w700),
                    decoration: InputDecoration(
                      focusedBorder: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(6),
...
              Container(
                color: Colors.white,
                child: SizedBox(
                  height: 49,
                  width: 39,
                  child: TextFormField(
                    key: const Key("num3Key"),
                    controller: _num3,
                    style: GoogleFonts.notoSans(
                        fontSize: 16, fontWeight: FontWeight.w700),
                    decoration: InputDecoration(
                      focusedBorder: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(6),
...
              Container(
                color: Colors.white,
                child: SizedBox(
                  height: 49,
                  width: 39,
                  child: TextFormField(
                    key: const Key("num4Key"),
                    controller: _num4,
                    style: GoogleFonts.notoSans(
                        fontSize: 16, fontWeight: FontWeight.w700),
                    decoration: InputDecoration(
                      focusedBorder: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(6),
...
              Container(
                color: Colors.white,
                child: SizedBox(
                  height: 49,
                  width: 39,
                  child: TextFormField(
                    key: const Key("num5Key"),
                    controller: _num5,
                    style: GoogleFonts.notoSans(
                        fontSize: 16, fontWeight: FontWeight.w700),
                    decoration: InputDecoration(
                      focusedBorder: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(6),
...
              Container(
                color: Colors.white,
                child: SizedBox(
                  height: 49,
                  width: 39,
                  child: TextFormField(
                    key: const Key("num6Key"),
                    controller: _num6,
                    style: GoogleFonts.notoSans(
                        fontSize: 16, fontWeight: FontWeight.w700),
                    decoration: InputDecoration(
                      focusedBorder: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(6),
...
        const SizedBox(
          height: 9,
        ),
        Padding(
          padding: const EdgeInsets.only(left: 32, right: 32),
          child: CustomButton(
            key: const Key("verifyConfirmationKey"),
            content: Text(
              "Verify",
              style: GoogleFonts.notoSans(
                fontSize: 14,
                fontWeight: FontWeight.w700,
              ),
...
