...
    super.dispose();
  }

  final List<String> questions = [
    'Product Arena je full-time tromjesečna praksa, da li spreman/a učenju i radu posvetiti 8 sati svakog radnog dana?',
    'Šta te motiviše?',
    'Da li imaš ili si imao/la neki hobi ili se baviš nekim sportom?',
    'Postoji li neko interesovanje koje imaš, ali ga trenutno ne možeš ostvariti?',
    'Da li bi vodio/la brigu o kućnom ljubimcu svojih komšija dok su oni na godišnjem odmoru?',
    'Kapetan si piratskog broda, tvoja posada može da glasa kako se dijeli zlato. Ako se manje od polovine pirata složi sa tobom, umrijet ćeš. \n \nKakvu podjelu zlata bi predložio/la tako da dobiješ dobar dio plijena, a ipak preživiš?',
    'Pogledajte video snimak Amera i poslušajte njegovu poruku.',
    'Za koju poziciju se prijavljuješ?'
  ];

  @override
  Widget build(BuildContext context) {
    final emailPasswordProvider =
...
